--- a/styles.css
+++ b/styles.css
@@ -201,6 +201,60 @@ section>div {
     margin-top: 1px;
 }
 
+/*SECTION COMPETENCES*/
+
+
+.h3gauche {
+    width: 90%;
+}
+
+.comp {
+    display: flex;
+    flex-flow: row wrap;
+    margin-bottom: 10px;
+}
+
+.comp p {
+    flex: 0 0 40%;
+}
+
+.conteneur-barre {
+    flex: 0 0 60%;
+    border-radius: 5px;
+    background-color: grey;
+    border-bottom: 1px ridge grey;
+}
+
+.barre {
+    display: block;
+    height: 100%;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+.c80 {
+    width: 80%;
+    background-color: rgb(0, 162, 255);
+}
+
+.c90 {
+    width: 90%;
+    background-color: rgb(0, 69, 219);
+}
+
+.comp2 {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+.conteneur-barre2 {
+    flex: 0 0 100%;
+    height: 0.5em;
+    margin-bottom: 0.25em;
+    border-radius: 5px;
+    background-color: grey;
+}
 
 /*VERSION BUREAU DU CV*/
 
